Created Local server and authenticated connection to Cloud SQL with proxy
- Created gitignore
  - added data sensitive things like env vars and cloud poxy for SQL connections

- Created Flask App
  - default endpoint
  - established connection to SQL server with cloud proxy

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
+cloud_sql_proxy
+
+## Environment Variables ##
+app.yaml
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
