- Updated gitignore to remove trivial comments - updated app.py to render html welcome page (NOT WORKING) - created driver to abstracter server and proxy startup - created virtual env setup for other developers reference

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
+asn1crypto==1.4.0
+autopep8==1.5.7
+cffi==1.14.6
+click==8.0.1
+cryptography==2.2.2
 Flask==2.0.1
+Flask-MySQLdb==0.2.0
+greenlet==1.1.1
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mysqlclient==2.0.3
+pycodestyle==2.8.0
+pycparser==2.20
 PyMySQL==1.0.2
+pyrsistent==0.16.0
+python-dotenv==0.19.0
+six==1.16.0
+SQLAlchemy==1.4.25
+toml==0.10.2
+Werkzeug==2.0.1
