--- a/Documentation/requirements_mac.txt
+++ b/Documentation/requirements_mac.txt
@@ -5,6 +5,7 @@ click==8.0.1
 cryptography==2.2.2
 Flask==2.0.1
 Flask-MySQLdb==0.2.0
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 idna==3.2
 itsdangerous==2.0.1
