--- a/Documentation/requirements_mac.txt
+++ b/Documentation/requirements_mac.txt
@@ -3,21 +3,34 @@ autopep8==1.5.7
 cffi==1.14.6
 click==8.0.1
 cryptography==2.2.2
+cycler==0.11.0
 Flask==2.0.1
 Flask-MySQLdb==0.2.0
 Flask-SQLAlchemy==2.5.1
+fonttools==4.28.1
 greenlet==1.1.1
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 mysqlclient==2.0.3
+numpy==1.21.4
+packaging==21.2
+pandas==1.3.4
+Pillow==8.4.0
 pycodestyle==2.8.0
 pycparser==2.20
 PyMySQL==1.0.2
+pyparsing==2.4.7
 pyrsistent==0.16.0
+python-dateutil==2.8.2
 python-dotenv==0.19.0
+pytz==2021.3
+setuptools-scm==6.3.2
 six==1.16.0
 SQLAlchemy==1.4.25
 toml==0.10.2
+tomli==1.2.2
 Werkzeug==2.0.1
