Updated gitignore to ignore virtual env

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python
+# Virtual Env
+Documentation/venv/*
 
 ### Flask ###
 instance/*
